--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,23 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.alban42.asteroid.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/settings" >
+        </activity>
+        <activity
+            android:name=".activities.GameActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_game"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" android:screenOrientation="landscape">
         </activity>
     </application>
 
